Initial Version for #700

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -4495,6 +4495,39 @@
     </p>
   </section>
 
+  <section id="structural_roles">
+    <h2>Structural Roles</h2>
+    <p>ARIA provides roles which structure and organize content in a page.
+      Generally, if using a host language which provides an element with equivalent semantics, 
+      authors should avoid using these structural roles unless using the structural role to retrofit 
+      legacy content when it would be cost prohibitive to alter the underlying DOM.
+      @@ Add Web Components use case here @@
+      The following structural roles are defined.
+      <ul>
+          <li>article</li>
+          <li>blockquote</li>
+          <li>caption</li>
+          <li>definition</li>
+          <li>directory</li>
+          <li>document</li>
+          <li>feed</li>
+          <li>figure</li>
+          <li>group</li>
+          <li>heading</li>
+          <li>img</li>
+          <li>list</li>
+          <li>listitem</li>
+          <li>math</li>
+          <li>note</li>
+          <li>paragraph</li>
+          <li>separator (when not focusable)</li>
+          <li>term</li>      
+        </ul>
+    </p>
+
+  </section>
+
+
   <section id="appendices" class="appendix">
     <h2>Appendices</h2>
 
