--- a/examples/treeview/multi-select-1/multi-select-1a.html
+++ b/examples/treeview/multi-select-1/multi-select-1a.html
@@ -32,8 +32,8 @@
       <p>
         The below example implements the
         <a href="../../../#TreeView">Treeview Design Pattern</a>
-        to simulate a file selector or mulitiple files selector.
-        When users activate an item that represents a file name in the below tree, the name of the selected file appears in the read-only edit field next to the tree.
+        to simulate the selection of multiple files.
+        When users select or unselect an item that represents a file name in the tree widget below, the list of current set of selected files appears in a read-only textarea field next to the tree widget.  This example sets <code>aria-selected=<q>true</q></code> when a file is selected and <code>aria-selected=<q>false</q></code> when a file is not selected.
       </p>
       <p>
         This example relies on the browser to compute values for <code>aria-setsize</code>, <code>aria-posinset</code>, and <code>aria-level</code>.
