--- a/examples/treeview/multi-select-1/multi-select-1b.html
+++ b/examples/treeview/multi-select-1/multi-select-1b.html
@@ -29,10 +29,12 @@
     <main>
       <h1>File Directory Multi-Select Treeview Example Using Declared Properties</h1>
       <p>
+      <p>
         The below example implements the
         <a href="../../../#TreeView">Treeview Design Pattern</a>
-        to simulate a file selector or mulitiple files selector.
-        When users activate an item that represents a file name in the below tree, the name of the selected file appears in the read-only edit field next to the tree.
+        to simulate the selection of multiple files.
+        When users select or unselect an item that represents a file name in the tree widget below, the list of current set of selected files appears in a read-only textarea field next to the tree widget.  This example sets <code>aria-selected=<q>true</q></code> when a file is selected and removes the <code>aria-selected</code> property when the file is not selected.
+      </p>
       </p>
       <p>
         The code in this example explicitly declares values for <code>aria-setsize</code>, <code>aria-posinset</code> and <code>aria-level</code>, which overrides browser computation of values for these properties.
