remove redundant li

--- a/examples/dialog-modal/alertdialog.html
+++ b/examples/dialog-modal/alertdialog.html
@@ -159,9 +159,7 @@
               <th scope="row"><code>aria-describedby=<q>IDREF</q></code></th>
               <td><code>div</code></td>
               <td>
-                <ul>
-                  <li>Gives the alertdialog an accessible description by referring to the dialog content that describes the primary message or purpose of the dialog.</li>
-                </ul>
+                Gives the alertdialog an accessible description by referring to the dialog content that describes the primary message or purpose of the dialog.
               </td>
             </tr>
             <tr>
