Added escape key closing the submenu

--- a/examples/menubar/menubar-2/menubar-2.html
+++ b/examples/menubar/menubar-2/menubar-2.html
@@ -161,6 +161,14 @@
         </tr>
         <tr>
           <th>
+            <kbd>Escape</kbd>
+          </th>
+          <td>
+            Closes submenu.
+          </td>
+        </tr>
+        <tr>
+          <th>
             <kbd>Right Arrow</kbd>
           </th>
           <td>
