--- a/aria-practices.html
+++ b/aria-practices.html
@@ -4514,9 +4514,9 @@
     </p>
     <ol>
       <li>When the HTML element cannot be styled in a way that meets visual design requirements.</li>
-      <li>When testing reveals that the ARIA equivalent is better supported by browsers or assistive technologies.</li>
+      <li>When testing reveals that browsers or assistive technologies provide better support for the ARIA equivalent.</li>
       <li>When remediating or retrofitting legacy content and altering the underlying DOM to use the HTML would be cost prohibitive.</li>
-      <li>When the implicit semantics of the HTML elements needed to assemble a custom web conponent do not convey the most appropriate accessibility semantics.</li>
+      <li>When building a web component to compose a <a href="https://html.spec.whatwg.org/multipage/#custom-elements">custom element</a> and the element being extended  does not convey the appropriate or sufficient accessibility semantics.</li>
     </ol>
     <p>The following table lists all structural roles defined in ARIA 1.2.</p>
     <table class="widget-features">
