Minor editorial revision.

--- a/examples/menubar/menubar-2/menubar-2.html
+++ b/examples/menubar/menubar-2/menubar-2.html
@@ -164,7 +164,7 @@
             <kbd>Escape</kbd>
           </th>
           <td>
-            Closes submenu.
+            If a submenu is open, closes it. Otherwise, does nothing.
           </td>
         </tr>
         <tr>
