--- a/examples/menubar/menubar-2/menubar-2.html
+++ b/examples/menubar/menubar-2/menubar-2.html
@@ -174,6 +174,14 @@
         </tr>
         <tr>
           <th>
+            <kbd>Escape</kbd>
+          </th>
+          <td>
+            If a submenu is open, closes it. Otherwise, does nothing.
+          </td>
+        </tr>
+        <tr>
+          <th>
             <kbd>Right Arrow</kbd>
           </th>
           <td>
