Alert Dialog Example: Fix inconsistencies with example template
Modified examples/dialog-modal/alertdialog.html:
* Remove header element from related links nav and fix aria-label
* remove aria-labelledby from main
* remove aria-labeledby from sections that turned them into regions

--- a/examples/dialog-modal/alertdialog.html
+++ b/examples/dialog-modal/alertdialog.html
@@ -18,8 +18,7 @@
   </head>
 
   <body>
-    <nav aria-labelledby="ex_related" class="feedback">
-      <header id="ex_related">Related Links</header>
+    <nav aria-label="Related Links" class="feedback">
       <ul>
         <li><a href="../../#browser_and_AT_support">Browser and Assistive Technology Support</a></li>
         <li><a href="https://github.com/w3c/aria-practices/issues/new">Report Issue</a></li>
@@ -27,8 +26,8 @@
         <li><a href="../../#alertdialog">Design Pattern</a></li>
       </ul>
     </nav>
-    <main aria-labelledby="main_label">
-      <h1 id="main_label">Alert Dialog Example</h1>
+    <main>
+      <h1>Alert Dialog Example</h1>
       <p>
         The below example demonstrates the <a href="../../#alertdialog">design pattern for an alert dialog</a>.
         The <a href="../../#alert">design pattern for an alert</a> is also demonstrated to allow the user to experience the difference between the two patterns.
@@ -57,7 +56,7 @@
         <li><a href="alert.html">Alert</a>: a basic alert.</li>
         <li><a href="../dialog-modal/dialog.html">Modal Dialog</a>: an example of multiple modal dialogs.</li>
       </ul>
-      <section aria-labelledby="ex_label">
+      <section>
         <h2 id="ex_label">Example</h2>
         <div role="separator" id="ex_start_sep" aria-labelledby="ex_start_sep ex_label" aria-label="Start of"></div>
         <div id="ex_alertdialog">
@@ -81,8 +80,8 @@
         </div>
         <div role="separator" id="ex_end_sep" aria-labelledby="ex_end_sep ex_label" aria-label="End of"></div>
       </section>
-      <section aria-labelledby="a11y_label">
-        <h2 id="a11y_label">Accessibility Features</h2>
+      <section>
+        <h2>Accessibility Features</h2>
         <p>
           Note that this example uses code from the <a href="../dialog-modal/dialog.html">modal dialog example</a> to handle the behavior of the <code>alertdialog</code>.
           Referencing that example may also be useful.
@@ -101,7 +100,7 @@
           </li>
         </ol>
       </section>
-      <section aria-labelledby="kbd_label">
+      <section>
         <h2 id="kbd_label">Keyboard Support</h2>
         <table aria-labelledby="kbd_label" class="def">
           <thead>
@@ -144,7 +143,7 @@
           </tbody>
         </table>
       </section>
-      <section aria-labelledby="rps_label">
+      <section>
         <h2 id="rps_label">Role, Property, State, and Tabindex  Attributes</h2>
         <table aria-labelledby="rps_label" class="data attributes">
           <thead>
@@ -217,14 +216,14 @@
           </li>
         </ol>
       </section>
-      <section aria-labelledby="src_label">
+      <section>
         <h2 id="src_label">Javascript and CSS Source Code</h2>
         <ul>
           <li> CSS: <a href="css/dialog.css" type="text/css">dialog.css</a></li>
           <li> Javascript: <a href="js/alertdialog.js" type="text/javascript">alertdialog.js</a>, <a href="js/dialog.js" type="text/javascript">dialog.js</a></li>
         </ul>
       </section>
-      <section aria-labelledby="sc1_label">
+      <section>
         <h2 id="sc1_label">HTML Source Code</h2>
         <div role="separator" id="sc1_start_sep" aria-labelledby="sc1_start_sep sc1_label" aria-label="Start of"></div> <pre><code id="sc1"></code></pre>
         <div role="separator" id="sc1_end_sep" aria-labelledby="sc1_end_sep sc1_label" aria-label="End of"></div>
