Alert Dialog Example: Make title tag consistent with H1

--- a/examples/dialog-modal/alertdialog.html
+++ b/examples/dialog-modal/alertdialog.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Alert and Message Dialogs Example | WAI-ARIA Authoring Practices 1.1</title>
+    <title>Alert Dialog Example | WAI-ARIA Authoring Practices 1.1</title>
     <!--  Core js and css shared by all examples; do not modify when using this template. -->
     <link rel="stylesheet" href="https://www.w3.org/StyleSheets/TR/2016/base.css">
     <link rel="stylesheet" href="../css/core.css">
